<resources>
    <string name="app_name">日晷</string>
    <string name="toolbar_day_menu">菜单</string>
    <string name="toolbar_day_title">日晷</string>
    <string name="toolbar_day_task">添加任务</string>
    <string name="toolbar_day_schedule">添加日程</string>
    <string name="toolbar_day_add">添加今日任务</string>
    <string name="toolbar_month_menu">菜单</string>
    <string name="toolbar_month_add">添加月计划</string>
    <string name="toolbar_month_delete">删除月计划</string>
    <string name="toolbar_year_menu">菜单</string>
    <string name="toolbar_year_add">添加年计划</string>
    <string name="toolbar_year_delete">删除年计划</string>
    <string name="navigation_main_year">年</string>
    <string name="navigation_main_month">月</string>
    <string name="navigation_main_day">日</string>
    <string name="nav_menu_name">那洪涛</string>
    <string name="nav_menu_motto">一分耕耘，一分收获</string>
    <string name="nav_menu_task_table">任务表</string>
    <string name="nav_menu_schedule_table">日程表</string>
    <string name="nav_menu_daily_introspection_table">日省表</string>
    <string name="nav_menu_overdue_task">逾期任务</string>
    <string name="nav_menu_task_completed_table">已完成任务表</string>
    <string name="nav_menu_schedule_completed_table">已完成日程表</string>
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">手机号码无效</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">提供EMAIL完成所需的联系人权限。</string>
    <string name="task_table_toolbar_return">日晷</string>
    <string name="task_table_toolbar_title">任务表</string>
    <string name="task_table_toolbar_add">添加任务</string>
    <string name="task_table_toolbar_delete">删除任务</string>
    <string name="schedule_table_toolbar_return">日晷</string>
    <string name="schedule_table_toolbar_title">日程表</string>
    <string name="schedule_table_toolbar_add">添加日程</string>
    <string name="schedule_table_toolbar_delete">删除日程</string>
    <string name="overdue_task_table_toolbar_return">日晷</string>
    <string name="overdue_task_table_toolbar_title">逾期任务表</string>
    <string name="add_task_toolbar_title">任务添加</string>
    <string name="add_task_toolbar_return">任务表</string>
    <string name="add_task_name">任务名称</string>
    <string name="add_task_place">任务地点</string>
    <string name="add_task_begin_time">起始时间</string>
    <string name="add_task_terminal_time">终止时间</string>
    <string name="add_task_type">任务类型</string>
    <string name="add_task_level">任务级别</string>
    <string name="add_task_custom_level">自定义级别</string>
    <string name="add_task_deadline">截止时间</string>
    <string name="add_task_ok">确定</string>
    <string name="add_task_cancel">取消</string>
    <string name="add_task_name_edit_text">任务名称</string>
    <string name="add_task_place_edit_text">任务地点</string>
    <string name="add_task_begin_time_edit_text">1997.00.00/00:00</string>
    <string name="add_task_terminal_time_edit_text">1997.00.00/00:00</string>
    <string name="add_task_custom_level_edit_text">自己定义任务级别</string>
    <string name="add_task_deadline_edit_text">1997.00.00/00:00</string>
    <string name="add_task_study">学习</string>
    <string name="add_task_social">社交</string>
    <string name="add_task_work">工作</string>
    <string name="add_task_play">娱乐</string>
    <string name="add_task_sleep">睡觉</string>
    <string name="add_task_others">其它</string>
    <string name="add_task_error">类型错误</string>
    <string name="add_task_level_first">重要且紧急</string>
    <string name="add_task_level_second">重要但不紧急</string>
    <string name="add_task_level_third">不重要但紧急</string>
    <string name="add_task_level_fourth">既不重要又不紧急</string>
    <string name="add_task_hint_name">任务名称不能为空</string>
    <string name="add_task_hint_deadline">截止日期不能为空</string>
    <string name="add_task_hint_deadline_time">截止时间不能小于当前时间</string>
    <string name="add_task_hint_custom_level">用户自定义等级不能为空</string>
    <string name="add_schedule_toolbar_title">日程添加</string>
    <string name="add_schedule_toolbar_return">日程表</string>
    <string name="add_schedule_name">日程名称</string>
    <string name="add_schedule_place">日程地点</string>
    <string name="add_schedule_begin_time">起始时间</string>
    <string name="add_schedule_terminal_time">终止时间</string>
    <string name="add_schedule_type">日程类型</string>
    <string name="add_schedule_ok">确定</string>
    <string name="add_schedule_cancel">取消</string>
    <string name="add_schedule_name_edit_text">日程名称</string>
    <string name="add_schedule_place_edit_text">日程地点</string>
    <string name="add_schedule_begin_time_edit_text">1997.00.00/00:00</string>
    <string name="add_schedule_terminal_time_edit_text">1997.00.00/00:00</string>
    <string name="add_schedule_hint_name">日程名称不能为空</string>
    <string name="add_schedule_hint_begin">起始时间不能为空</string>
    <string name="add_schedule_hint_begin_time">起始时间不能小于当前时间</string>
    <string name="add_schedule_hint_terminal">终止时间不能为空</string>
    <string name="add_schedule_hint_terminal_time">终止时间不能小于当前时间</string>
    <string name="add_schedule_hint_begin_terminal">起始时间不能大于终止时间</string>
    <string name="add_schedule_hint_place">日程地点不能为空</string>
    <string name="daily_introspection_toolbar_return">日晷</string>
    <string name="daily_introspection_toolbar_title">日省表</string>
    <string name="completed_task_table_toolbar_return">日晷</string>
    <string name="completed_task_table_toolbar_title">已完成任务表</string>
    <string name="completed_schedule_table_toolbar_return">日晷</string>
    <string name="completed_schedule_table_toolbar_title">已完成日程表</string>
    <string name="item_task_table_deadline">截止时间</string>
    <string name="item_task_table_type">任务类型</string>
    <string name="item_task_table_process">任务进度</string>
    <string name="item_task_table_custom_level">自定义等级</string>
    <string name="item_schedule_table_type">日程类型</string>
    <string name="item_schedule_table_begin">起始时间</string>
    <string name="item_schedule_table_terminal">终止时间</string>
    <string name="item_schedule_table_place">日程地点</string>
    <string name="item_main_task_begin">起始时间</string>
    <string name="item_main_task_terminal">结束时间</string>
    <string name="item_main_task_place">任务地点</string>
    <string name="item_main_task_process">任务进度</string>
    <string name="dialog_set_task_begin">起始时间</string>
    <string name="dialog_set_task_terminal">结束时间</string>
    <string name="dialog_set_task_place">任务地点</string>
    <string name="dialog_set_task_ok">确定</string>
    <string name="dialog_set_task_cancel">取消</string>
    <string name="dialog_set_task_hint_begin">起始时间不能为空</string>
    <string name="dialog_set_task_hint_begin_time">起始时间不能小于当前时间</string>
    <string name="dialog_set_task_hint_terminal">终止时间不能为空</string>
    <string name="dialog_set_task_hint_terminal_deadline">终止时间不能大于截止时间</string>
    <string name="dialog_set_task_hint_terminal_time">终止时间不能小于当前时间</string>
    <string name="dialog_set_task_hint_begin_terminal">起始时间不能大于终止时间</string>
    <string name="dialog_set_task_hint_place">地点不能为空</string>
    <string name="dialog_set_task_progress_begin_prompt">当前任务进度：0%</string>
    <string name="dialog_set_task_progress_prompt">当前任务进度：</string>
    <string name="dialog_set_task_progress_percent">%</string>
    <string name="fragment_month">月</string>
    <string name="fragment_month_year">年</string>
    <string name="fragment_month_today">今天</string>
    <string name="fragment_month_switch">切换周月</string>
    <string name="fragment_month_change">更改效果</string>
    <string name="fragment_month_next">下一月</string>
    <string name="fragment_month_last">上一月</string>
    <string name="fragment_month_mon">一</string>
    <string name="fragment_month_tue">二</string>
    <string name="fragment_month_wed">三</string>
    <string name="fragment_month_thu">四</string>
    <string name="fragment_month_fri">五</string>
    <string name="fragment_month_sat">六</string>
    <string name="fragment_month_sun">七</string>
    <string-array name="english_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="list_dialog_title">动态更新</string>
    <string name="func_dialog_title">功能支持</string>
    <string-array name="list_dialog_items">
        <item>周日为周起始</item>
        <item>周一为周起始</item>
        <item>周六为周起始</item>
        <item>更换选择模式：单选/默认</item>
        <item>热插拔更换周月视图</item>
        <item>月视图模式：全部显示</item>
        <item>月视图模式：仅当前月份</item>
        <item>月视图模式：自动填充</item>
    </string-array>
    <string-array name="func_dialog_items">
        <item>展开日历布局</item>
        <item>收缩日历布局</item>
        <item>上一页</item>
        <item>下一页</item>
        <item>返回今天</item>
        <item>限制日期范围</item>
        <item>显示日期范围</item>
    </string-array>
    <string name="flyme">Flyme手机日历</string>
    <string name="flyme_desc">国内手机日历风格，自动选择第一天</string>
    <string name="custom_china">精美定制中国风</string>
    <string name="custom_china_desc">周末变色、圆点事件+文本标记</string>
    <string name="full">全屏风格</string>
    <string name="full_desc">如果你需要的话，分分钟的事</string>
    <string name="range">范围选择</string>
    <string name="range_desc">如果你需要范围选择的日历</string>
    <string name="multi">多选风格</string>
    <string name="multi_desc">如果你需要多选风格的日历</string>
    <string name="colorful">多彩风格</string>
    <string name="colorful_desc">取决于你怎么绘制</string>
    <string name="view_pager">ViewPager风格</string>
    <string name="view_pager_desc">如果内容是ViewPager的话</string>
    <string name="single">单选风格</string>
    <string name="single_desc">单选风格是比较受欢迎</string>
    <string name="progress">进度条风格</string>
    <string name="progress_desc">如果你正在开发todo APP的话</string>
    <string name="index">下标订阅风格</string>
    <string name="index_desc">只要你想画，就能画</string>
    <string name="galaxy">星系风格</string>
    <string name="galaxy_desc">很简单就能定制</string>
    <string name="simple">简单风格</string>
    <string name="simple_desc">这是最简单的日历</string>
</resources>