<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_task_table"
            android:icon="@drawable/nav_call"
            android:title="@string/nav_menu_task_table" />
        <item
            android:id="@+id/nav_menu_schedule_table"
            android:icon="@drawable/nav_friends"
            android:title="@string/nav_menu_schedule_table" />
        <item
            android:id="@+id/nav_menu_daily_introspection_table"
            android:icon="@drawable/nav_location"
            android:title="@string/nav_menu_daily_introspection_table" />
        <item
            android:id="@+id/nav_menu_task_completed_table"
            android:icon="@drawable/nav_mail"
            android:title="@string/nav_menu_task_completed_table" />
        <item
            android:id="@+id/nav_menu_schedule_completed_table"
            android:icon="@drawable/nav_task"
            android:title="@string/nav_menu_schedule_completed_table" />
    </group>
</menu>