<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_day_add"
        android:icon="@drawable/ic_add"
        android:title="@string/toolbar_day_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_r_img"
        android:icon="@drawable/ic_right_menu"
        android:title="@string/toolbar_day_menu"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/toolbar_day_task"
                    android:title="@string/toolbar_day_task"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/toolbar_day_schedule"
                    android:title="@string/toolbar_day_schedule"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>